# AutoGPT

./: README.md  package_codex_project.py  pyproject.toml
apps/multivoice_tts/: README.md  __init__.py  audio_composer.py  jobs.py  main.py  models.py  srt_parser.py  tts_service.py
apps/multivoice_tts/static/: app.js
apps/multivoice_tts/templates/: index.html
apps/srt_voice_service/: app.py  requirements.txt
apps/srt_voice_service/services/: audio_stitcher.py  config.py  speech_recognizer.py  srt_parser.py  voice_provider.py
apps/srt_voice_service/static/: app.js
apps/srt_voice_service/templates/: index.html
autogpts/autogpt/autogpt/config/: config.py
autogpts/autogpt/autogpt/speech/: index_tts.py  index_tts2.py  say.py
docs/: srt_voice_service.md
docs/content/configuration/: options.md
