[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Merwane Hamadi <merwanehamadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
pydub = "^0.25.1"
python-multipart = "^0.0.9"
requests = "^2.31.0"
srt = "^3.5.3"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
