[project]
name = "auto-gpt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Merwane Hamadi", email = "merwanehamadi@gmail.com" }
]
dependencies = [
  "fastapi>=0.110.0,<0.111.0",
  "jinja2>=3.1.3,<4.0.0",
  "pydub>=0.25.1,<0.26.0",
  "python-multipart>=0.0.9,<0.1.0",
  "requests>=2.31.0,<3.0.0",
  "srt>=3.5.3,<4.0.0",
  "uvicorn[standard]>=0.27.1,<0.28.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "apps",
  "autogpts",
]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"

[tool.hatch.build.targets.sdist]
include = [
  "apps",
  "autogpts",
  "cli.py",
  "README.md",
  "LICENSE",
]
